# ParkVision_AI

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  video_test.py
.github/workflows/: ci.yaml
app/api/: main.py
app/authentification/: auth.py  security.py
app/db/: session.py
app/models/: detection.py  model.py  parking.py  user.py
app/schemas/: detection.py  parking.py  schemas.py  user.py
app/scripts/: car_data.py  notification.py  parking_utile.py
mlflow_utils/: mlflow_tracker.py
scripts/: main.py  send_results.py  video_test.py
test/: conftest.py  test_main.py
